--- a/src/app/agrega-curva/agrega-curva.component.html
+++ b/src/app/agrega-curva/agrega-curva.component.html
@@ -1,25 +1,31 @@
-<p> Curva <input type="text" [(ngModel)]="curvaNueva.numero"></p>
+<p>Curva <input type="text" [(ngModel)]="curvaNueva.numero"></p>
 <p>Descipcion <input type="text" [(ngModel)]="curvaNueva.descripcion"></p>
 <p>Cambio <input type="text" [(ngModel)]="curvaNueva.cambio"> </p>
 <button (click)="agregar()">Agregar</button>
-
+<hr>
 <p>Anotaciones</p>
-<input type="text">
-<button (click)="agregar()">Agregar</button>
+<input type="text" [(ngModel)]="note">
+<button (click)="addNote()">Agregar</button>
 
-<mat-card *ngFor="let c of curva">
 
-    <div *ngIf="editModal">
-        <p>Numero de curva: <input type="text" [(ngModel)]="c.numero"></p>
-        <p>Descripcion: <input type="text" [(ngModel)]="c.descripcion"></p>
-        <p>Cambio: <input type="text" [(ngModel)]="c.cambio"> </p>
-        x: {{c.x}} y: {{c.y}}
-        <button>Aceptar</button>
-        <button (click)="eliminar(c)">Eliminar</button>
-    </div>
-    <div *ngIf="!editModal">
-        Numero de curva: {{c.numero}} {{c.descripcion}} Cambio:{{c.cambio}} x: {{c.x}} y: {{c.y}}
-        <button (click)="editar(c)">Editar</button>
-        <button (click)="eliminar(c)">Eliminar</button>
-    </div>
-</mat-card>
+
+<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+    <mat-card cdkDrag *ngFor="let c of curva">
+
+        <div *ngIf="editModal">
+            <p>Numero de curva: <input type="text" [(ngModel)]="c.numero"></p>
+            <p>Descripcion: <input type="text" [(ngModel)]="c.descripcion"></p>
+            <p>Cambio: <input type="text" [(ngModel)]="c.cambio"> </p>
+            x: {{c.x}} y: {{c.y}}
+            <button (click)=acceptEdit()>✔️</button>
+        </div>
+        <div *ngIf="!editModal">
+            Numero de curva: {{c.numero}} {{c.descripcion}} Cambio:{{c.cambio}} x: {{c.x}} y: {{c.y}}
+            <button (click)="editar(c)">✏️</button>
+        </div>
+        <button (click)="delete(c)">❌</button>
+    </mat-card>
+    <mat-card cdkDrag *ngFor="let n of notes">
+        <p>{{n.note}}</p>
+    </mat-card>
+</div>
