--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar>
     <span>Notas de circuito</span>
 </mat-toolbar>
-<mat-drawer-container class="example-container">
-    <mat-drawer mode="side" opened>
+<mat-drawer-container>
+    <mat-drawer mode="side" opened class="container-left">
         <app-carga-imagenes></app-carga-imagenes>
-        <app-agrega-curva (noteOutput)="addNote($event)" (curvaOutput)="addCurva($event)"></app-agrega-curva>
+        <app-data-adder (mapDataOutput)="addMapData($event)"></app-data-adder>
     </mat-drawer>
-    <mat-drawer-content>
-        <app-muestra-imagenes [curvas]="curva" [notes]="notes"></app-muestra-imagenes>
+    <mat-drawer-content class="container-right">
+        <app-muestra-imagenes [mapData]="mapData"></app-muestra-imagenes>
     </mat-drawer-content>
 </mat-drawer-container>
