mas y mas cosas

--- a/src/app/carga-imagenes/carga-imagenes.component.html
+++ b/src/app/carga-imagenes/carga-imagenes.component.html
@@ -4,7 +4,7 @@
             Cargar Imagen
         </mat-panel-title>
         <mat-panel-description>
-            Acá agregas imagenes
+            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
         </mat-panel-description>
     </mat-expansion-panel-header>
     <div class="form-group">
@@ -26,7 +26,7 @@
             Elegir Imagen
         </mat-panel-title>
         <mat-panel-description>
-            Acá Elegis imagenes
+            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
         </mat-panel-description>
     </mat-expansion-panel-header>
     Elegir imagen:
