--- a/src/app/data-adder/data-adder.component.html
+++ b/src/app/data-adder/data-adder.component.html
@@ -1,10 +1,27 @@
 <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
         <mat-panel-title>
+            Guardar/Cargar
+        </mat-panel-title>
+        <mat-panel-description>
+            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
+        </mat-panel-description>
+    </mat-expansion-panel-header>
+    <button (click)="saveData()">Guardar</button>
+    <div class="form-group">
+        <label for="file">Cargar (TBD)</label>
+        <!-- <input type="file" id="file" (change)="handleFileInput($event!.target.files)"> -->
+        <input type="file" id="file">
+    </div>
+
+</mat-expansion-panel>
+<mat-expansion-panel hideToggle>
+    <mat-expansion-panel-header>
+        <mat-panel-title>
             Agregar Curva
         </mat-panel-title>
         <mat-panel-description>
-            Acá agregas curvas
+            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
         </mat-panel-description>
     </mat-expansion-panel-header>
     <p>Curva <input type="text" [(ngModel)]="curvaNueva.number"></p>
@@ -19,7 +36,7 @@
             Agregar Comentario
         </mat-panel-title>
         <mat-panel-description>
-            Acá agregas comentarios
+            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
         </mat-panel-description>
     </mat-expansion-panel-header>
     <p>Anotaciones</p>
