--- a/src/app/carga-imagenes/carga-imagenes.component.html
+++ b/src/app/carga-imagenes/carga-imagenes.component.html
@@ -1,38 +1,22 @@
+<h2>Configuracion inicial</h2>
 <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
         <mat-panel-title>
-            Cargar Imagen
+            Elegir Fondo
         </mat-panel-title>
-        <mat-panel-description>
-            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
-        </mat-panel-description>
+        <mat-icon>keyboard_arrow_down</mat-icon>
     </mat-expansion-panel-header>
-    <div class="form-group">
-        <label for="file">Cargar mediante archivo</label>
 
-        <input type="file" id="file">
-        <button>Cargar Archivo</button>
-        <hr>
-        <p>Cargar mediante Url</p>
-        <input type="text">
-        <button>Cargar URL</button>
-        <hr>
+    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+        <mat-card cdkDrag *ngFor="let i of images">
+            <p>{{i}}</p>
+            <img style="width: 10vw;" src="../../assets/{{i}}" alt="">
+            <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" (click)="selectBackground(i)">
+              <mat-icon>add_photo_alternate</mat-icon>
+            </button>
+        </mat-card>
+        <mat-card *ngIf="images.length === 0">
+            Todavia no hay imagenes.
+        </mat-card>
     </div>
-</mat-expansion-panel>
-
-<mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-            Elegir Imagen
-        </mat-panel-title>
-        <mat-panel-description>
-            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
-        </mat-panel-description>
-    </mat-expansion-panel-header>
-    Elegir imagen:
-    <div *ngFor="let i of images">
-        Img {{i}}
-        <img style="width: 10vw;" src="../../assets/{{i}}" alt="">
-    </div>
-    <hr>
 </mat-expansion-panel>
