--- a/src/app/data-adder/data-adder.component.html
+++ b/src/app/data-adder/data-adder.component.html
@@ -4,7 +4,7 @@
             Guardar/Cargar
         </mat-panel-title>
         <mat-panel-description>
-            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
+            <mat-icon>keyboard_arrow_down</mat-icon>
         </mat-panel-description>
     </mat-expansion-panel-header>
     <button (click)="saveData()">Guardar</button>
@@ -15,19 +15,22 @@
     </div>
 
 </mat-expansion-panel>
+<h2>Agregar Informacion</h2>
 <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
         <mat-panel-title>
             Agregar Curva
         </mat-panel-title>
-        <mat-panel-description>
-            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
-        </mat-panel-description>
+        <mat-icon>keyboard_arrow_down</mat-icon>
     </mat-expansion-panel-header>
-    <p>Curva <input type="text" [(ngModel)]="curvaNueva.number"></p>
-    <p>Descipcion <input type="text" [(ngModel)]="curvaNueva.description"></p>
-    <p>Cambio <input type="text" [(ngModel)]="curvaNueva.gear"> </p>
-    <button (click)="addTurn()" [disabled]="curvaNueva.number === ''">Agregar</button>
+    <div class="matContent">
+        <mat-form-field class="form-field" appearance="fill">Número<input matInput type="text" [(ngModel)]="curvaNueva.number"></mat-form-field>
+        <mat-form-field class="form-field" appearance="fill">Descripción<input matInput type="text" [(ngModel)]="curvaNueva.description"></mat-form-field>
+        <mat-form-field class="form-field" appearance="fill">Marcha <input matInput type="text" [(ngModel)]="curvaNueva.gear"></mat-form-field>
+        <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" (click)="addTurn()" [disabled]="curvaNueva.number === ''">
+          <mat-icon>add</mat-icon>
+        </button>
+    </div>
 </mat-expansion-panel>
 
 <mat-expansion-panel hideToggle>
@@ -35,26 +38,24 @@
         <mat-panel-title>
             Agregar Comentario
         </mat-panel-title>
-        <mat-panel-description>
-            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Caret Down</title><path d="M98 190.06l139.78 163.12a24 24 0 0036.44 0L414 190.06c13.34-15.57 2.28-39.62-18.22-39.62h-279.6c-20.5 0-31.56 24.05-18.18 39.62z"/></svg>
-        </mat-panel-description>
+        <mat-icon>keyboard_arrow_down</mat-icon>
     </mat-expansion-panel-header>
-    <p>Anotaciones</p>
-    <input type="text" [(ngModel)]="note.description">
-    <button (click)="addNote()" [disabled]="note.description === ''">Agregar</button>
+    <mat-form-field class="form-field" appearance="fill">Comentario <input matInput type="text" [(ngModel)]="note.description"></mat-form-field>
+    <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" (click)="addNote()" [disabled]="note.description === ''">
+      <mat-icon>add</mat-icon>
+    </button>
 </mat-expansion-panel>
 
 
-<p>Curvas/Comentarios:</p>
-<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-    <mat-card cdkDrag style="background-color: #f5f5f5;" *ngFor="let d of mapData">
+<h2>Curvas/Comentarios:</h2>
+<div cdkDropList (cdkDropListDropped)="drop($event)">
+    <mat-card cdkDrag class="dataList" *ngFor="let d of mapData">
 
         <div *ngIf="editModal">
             <p *ngIf="d.data.number">Numero de curva: <input type="text" [(ngModel)]="d.data.number"></p>
             <p *ngIf="d.data.description">Descripcion: <input type="text" [(ngModel)]="d.data.description"></p>
             <p *ngIf="d.data.gear">Cambio: <input type="text" [(ngModel)]="d.data.gear"> </p>
             x: {{d.x}} y: {{d.y}}
-            <button (click)=acceptEdit()>✔️</button>
         </div>
         <div *ngIf="!editModal">
             <p *ngIf="d.data.number">Curva:{{d.data.number}}</p>
@@ -62,9 +63,10 @@
             <p *ngIf="d.data.gear">Cambio:{{d.data.gear}}</p>
             <p *ngIf="d.x">X:{{d.x}}</p>
             <p *ngIf="d.y">Y:{{d.y}}</p>
-            <button (click)="editar(d.data)">✏️</button>
         </div>
-        <button (click)="delete(d)">❌</button>
+        <button mat-button color="primary" *ngIf="editModal" class="editButton" (click)=acceptEdit()>✔️</button>
+        <button mat-button color="primary" *ngIf="!editModal" class="editButton" (click)="edit(d.data)">✏️</button>
+        <button mat-button color="primary" class="deleteButton" (click)="delete(d)">❌</button>
     </mat-card>
     <mat-card *ngIf="mapData.length === 0">
         Todavia no hay datos.
