--- a/src/app/muestra-imagenes/muestra-imagenes.component.html
+++ b/src/app/muestra-imagenes/muestra-imagenes.component.html
@@ -1,11 +1,22 @@
-<img class="images" src="../../assets/circuito1.svg" alt="circuito" />
+<img class="images" src="../../assets/{{image}}" alt="circuito" />
+<div class="background"></div>
+
+<mat-card class="dataCard configMatCard">
+    <mat-card-header>
+        <mat-card-title>Configuraciones</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-checkbox [(ngModel)]="debug" color="primary">Debug Position</mat-checkbox>
+    </mat-card-content>
+
+</mat-card>
 
 <div class="example-box" cdkDrag *ngFor="let d of mapData" (cdkDragEnded)="drop($event,d)">
-    <mat-card class="dataCard">
+    <mat-card class="dataCard font">
         <p *ngIf="d.data.number">Curva:{{d.data.number}}</p>
         <p *ngIf="d.data.description">{{d.data.description}} </p>
         <p *ngIf="d.data.gear">Cambio:{{d.data.gear}}</p>
-        <p *ngIf="d.x">X:{{d.x}}</p>
-        <p *ngIf="d.y">Y:{{d.y}}</p>
+        <p *ngIf="d.x && debug">X:{{d.x}}</p>
+        <p *ngIf="d.y && debug">Y:{{d.y}}</p>
     </mat-card>
 </div>
