--- a/src/app/muestra-imagenes/muestra-imagenes.component.html
+++ b/src/app/muestra-imagenes/muestra-imagenes.component.html
@@ -3,15 +3,15 @@
 
 <mat-card class="dataCard configMatCard">
     <mat-card-header>
-        <mat-card-title>Configuraciones</mat-card-title>
+        <mat-card-title style="color: black;">Configuraciones</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <mat-checkbox [(ngModel)]="debug" color="primary">Debug Position</mat-checkbox>
+        <mat-checkbox [(ngModel)]="debug" color="primary" style="color: black;">Debug Position</mat-checkbox>
     </mat-card-content>
 
 </mat-card>
 
-<div class="example-box" cdkDrag *ngFor="let d of mapData" (cdkDragEnded)="drop($event,d)">
+<div class="startCoords" cdkDrag *ngFor="let d of mapData" (cdkDragEnded)="drop($event,d)">
     <mat-card class="dataCard font">
         <p *ngIf="d.data.number">Curva:{{d.data.number}}</p>
         <p *ngIf="d.data.description">{{d.data.description}} </p>
