--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <mat-toolbar style="height: 5vh;">
-    <mat-toolbar>
-        <span>Notas de circuito</span>
-        <mat-icon class="mr-8">brightness_5</mat-icon>
-        <mat-slide-toggle [formControl]="toggleControl" class="mr-8">
-        </mat-slide-toggle>
-        <mat-icon>bedtime</mat-icon>
-    </mat-toolbar>
+    <span>Notas de circuito</span>
+    <mat-icon class="mr-8">brightness_5</mat-icon>
+    <mat-slide-toggle [formControl]="toggleControl" class="mr-8">
+    </mat-slide-toggle>
+    <mat-icon>bedtime</mat-icon>
+    <div class="preset-container">
+        <p class="preset-item">Preset</p>
+        <button mat-raised-button class="preset-item" color="primary" matSuffix mat-icon-button aria-label="Clear" (click)="loadPreset(1)">1</button>
+    </div>
+
 </mat-toolbar>
 <mat-drawer-container style="height: 95vh;">
     <mat-drawer mode="side" opened class="container-left">
