--- a/src/app/carga-imagenes/carga-imagenes.component.html
+++ b/src/app/carga-imagenes/carga-imagenes.component.html
@@ -1,10 +1,9 @@
 <h2>Configuracion inicial</h2>
-<mat-expansion-panel hideToggle>
+<mat-expansion-panel>
     <mat-expansion-panel-header>
         <mat-panel-title>
             Elegir Fondo
         </mat-panel-title>
-        <mat-icon>keyboard_arrow_down</mat-icon>
     </mat-expansion-panel-header>
 
     <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
