Ahora anda el cargar guardar y coordenadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
     </mat-slide-toggle>
     <mat-icon>bedtime</mat-icon>
     <div class="preset-container">
-        <p class="preset-item">Preset</p>
         <button mat-raised-button class="preset-item" color="primary" matSuffix mat-icon-button aria-label="Clear" (click)="loadPreset(1)">1</button>
     </div>
 
+    <button mat-raised-button color="primary">Buy me a coffe <mat-icon>coffee</mat-icon></button>
 </mat-toolbar>
 <mat-drawer-container style="height: 95vh;">
     <mat-drawer mode="side" opened class="container-left">
