--- a/src/app/data-adder/data-adder.component.html
+++ b/src/app/data-adder/data-adder.component.html
@@ -7,7 +7,10 @@
     <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" (click)="saveData()">
       <mat-icon>save</mat-icon>
     </button>
-    <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" [disabled]=true (click)="saveData()">
+    <mat-form-field>
+        <input matInput [(ngModel)]="loadValue">
+    </mat-form-field>
+    <button mat-raised-button color="primary" style="float:right" matSuffix mat-icon-button aria-label="Clear" (click)="loadData()">
       <mat-icon>add</mat-icon>
     </button>
 </mat-expansion-panel>
